# aphid

./: README
abcstatic/: CMakeLists.txt  abc.pro
adenium/: AdeniumInterface.cpp  AdeniumInterface.h  AdeniumRender.cpp  AdeniumRender.cu  AdeniumRender.cuh  AdeniumRender.h  AdeniumRenderInterface.h  AdeniumWorld.cpp  AdeniumWorld.h  CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp
ashader/: CMakeLists.txt  Loader.cpp  ParamPnt2.cpp  main.cpp
asimpledso/: CMakeLists.txt  SimpleDSOConfig.h.in  proceduralMain.cpp  test.ass
asimplerender/: CMakeLists.txt  SimpleRenderConfig.h.in  asimplerender.pro  main.cpp
bcc2d/: BccGlobal.cpp  BccGlobal.h  BccGrid.cpp  BccGrid.h  BccInterface.cpp  BccInterface.h  BccLattice.cpp  BccLattice.h  BccMesh.cpp  BccMesh.h  BccOctahedron.cpp  BccOctahedron.h  BccWorld.cpp  BccWorld.h  BlockBccMeshBuilder.cpp  BlockBccMeshBuilder.h  CMakeLists.txt  CartesianGrid.cpp  CartesianGrid.h  CurveReduction.cpp  CurveReduction.h  CurveSampler.cpp  CurveSampler.h  FitBccMesh.cpp  FitBccMesh.h  FitBccMeshBuilder.cpp  FitBccMeshBuilder.h  FitTest.cpp  FitTest.h  GenTetControl.cpp  GenTetControl.h  MortonHash.cpp  MortonHash.h  SampleGroup.cpp  SampleGroup.h  SingleMeshBuilder.cpp  SingleMeshBuilder.h  bcc2d.pro  bcc_common.h  foo.hes  (+7 more)
bitwise/: CMakeLists.txt  main.cpp
btree/: ActiveGroup.cpp  ActiveGroup.h  AdaptiveGrid3.h  Array.h  BNode.cpp  BNode.h  BTree.cpp  BTree.h  C3Tree.cpp  C3Tree.h  CMakeLists.txt  Dropoff.cpp  Dropoff.h  Entity.cpp  Entity.h  GridClustering.cpp  GridClustering.h  GridTables.h  HAssetGrid.h  HInnerGrid.h  HWorldGrid.cpp  HWorldGrid.h  KeyNData.h  List.cpp  List.h  MortonHash.cpp  MortonHash.h  Ordered.cpp  Ordered.h  Pair.cpp  Pair.h  Sample.cpp  Sample.h  Sculptor.cpp  Sculptor.h  Sequence.cpp  Sequence.h  Types.cpp  Types.h  VectorArray.h  (+2 more)
cmktut/: CMakeLists.txt  main.cpp
cudacg/: CMakeLists.txt  TestPRNG.cu  TestPRNG_impl.h  cu_testAtomic.cu  cu_testAtomic_impl.h  main.cpp
cudafem/: CMakeLists.txt  CudaCSRMatrix.cpp  CudaCSRMatrix.h  CudaConjugateGradientSolver.cpp  CudaConjugateGradientSolver.h  FEMTetrahedronSystem.cpp  FEMTetrahedronSystem.h  FEMWorldInterface.cpp  FEMWorldInterface.h  FemGlobal.cpp  FemGlobal.h  PhysicsControl.cpp  PhysicsControl.h  StripeMap.cpp  StripeMap.h  cuConjugateGradient.cu  cuConjugateGradient_implement.h  cuFemMath.cu  cuFemMath.cuh  cuFemTetrahedron.cu  cuFemTetrahedron_implement.h  glwidget.cpp  glwidget.h  image.qrc  main.cpp  window.cpp  window.h
defaultApp/: CMakeLists.txt  default.pro  glwidget.cpp  window.cpp
erod/: CMakeLists.txt
findseq/: CMakeLists.txt  main.cpp
flr/: CMakeLists.txt
gjk/: CMakeLists.txt  EpaPenetrationSolver.cpp  EpaPenetrationSolver.h  Gjk.cpp  Gjk.h  GjkContactSolver.cpp  GjkContactSolver.h  main.cpp
gp/: CMakeLists.txt  Covariance.h  RbfKernel.h  dist2.h  gsamp.h  interpWidget.cpp  interpWidget.h  interpWindow.cpp  interpWindow.h  interpmain.cpp  kernelWidget.cpp  kernelWidget.h  linspace.h  sampleKernelDialog.cpp  sampleKernelDialog.h  sampleKernelWidget.cpp  sampleKernelWidget.h  shapemain.cpp  shapewidget.cpp  shapewidget.h  shapewindow.cpp  shapewindow.h  testKernel.cpp  testKernelWindow.cpp  testKernelWindow.h  viewKernelDialog.cpp  viewKernelDialog.h
helloHdf/: CMakeLists.txt  Holder.cpp  Holder.h  checkIntegrityMain.cpp  diagnoseMain.cpp  main.cpp
hesperis/: ASampleTime.h  AdaptiveField.cpp  AdaptiveField.h  AdaptiveFieldDeformer.cpp  AdaptiveFieldDeformer.h  AdaptiveGrid.cpp  AdaptiveGrid.h  AttribUtil.cpp  AttribUtil.h  BoundTranslateNode.cpp  BoundTranslateNode.h  CMakeLists.txt  DeformationFieldUtil.cpp  DeformationFieldUtil.h  H5AttribNode.cpp  H5AttribNode.h  H5Availability.cpp  H5Availability.h  H5FieldIn.cpp  H5FieldIn.h  H5FieldOut.cpp  H5FieldOut.h  H5FileIn.cpp  H5FileIn.h  H5FileOut.cpp  H5FileOut.h  H5Holder.cpp  H5Holder.h  H5IO.cpp  H5IO.h  H5VCache.cpp  H5VCache.h  HAdaptiveField.cpp  HAdaptiveField.h  HesMeshNode.cpp  HesMeshNode.h  HesScene.cpp  HesScene.h  HesUVNode.cpp  HesUVNode.h  (+25 more)
httpreq/: CMakeLists.txt  main.cpp
julia/: AssetRender.cpp  AssetRender.h  CMakeLists.txt  CubeRender.cpp  CubeRender.h  CubeRenderInterface.h  JuliaTree.cpp  JuliaTree.h  JuliaWorld.cpp  JuliaWorld.h  Manager.h  Parameter.cpp  Parameter.h  QuatJulia.cpp  QuatJulia.h  WorldManager.h  WorldRender.cpp  WorldRender.h  WorldRenderInterface.h  assetRenderInterface.h  main.cpp  renderthread.cpp  renderthread.h  viewerMain.cpp  viewerParameter.cpp  viewerParameter.h  viewerWindow.cpp  viewerWindow.h  voxTest.cpp  voxTest.h  whitenoisewidget.cpp  whitenoisewidget.h
lfr/: CMakeLists.txt  DictionaryDialog.cpp  DictionaryDialog.h  DictionaryView.cpp  DictionaryView.h  ImageDialog.cpp  ImageDialog.h  LfMachine.cpp  LfMachine.h  LfParameter.cpp  LfParameter.h  LfThread.cpp  LfThread.h  LfWidget.cpp  LfWidget.h  LfWorld.cpp  LfWorld.h  StatisticDialog.cpp  StatisticDialog.h  StatisticWidget.cpp  StatisticWidget.h  cblasTempl.h  clapackTempl.h  dct.h  dctmn.h  linearMath.h  main.cpp  note_blas.txt  notes.txt  psnr.h  regr.h  testlapack.cpp  window.cpp  window.h
lib/: CMakeLists.txt  aphid.pro
musket/: CMakeLists.txt  readme.txt  shotgunAPIConfig.h.in
ntree/: CMakeLists.txt  Container.h  GridDrawer.h  NTreeDomain.h  NTreeDrawer.h  NTreeIO.cpp  NTreeIO.h  glwidget.cpp  glwidget.h  main.cpp  triMain.cpp  triWidget.cpp  triWidget.h  triWindow.cpp  triWindow.h  voxWidget.cpp  voxWidget.h  window.cpp  window.h  wldWidget.cpp  wldWidget.h
qef/: CMakeLists.txt  main.cpp
qtogl/: CMakeLists.txt  cactus.h  cylinder.h  drpcawidget.cpp  drpcawidget.h  drpcawindow.cpp  ebp.h  glwidget.cpp  glwidget.h  gpdfmain.cpp  gpdfwidget.cpp  gpdfwidget.h  gpdfwindow.cpp  gpdfwindow.h  gpdfxdialog.cpp  gpdfxdialog.h  gpdfxwidget.cpp  gpdfxwidget.h  instmain.cpp  instwidget.cpp  instwidget.h  instwindow.cpp  qtogl.pro  testClique.cpp  testDrpca.cpp  window.cpp
qtreui/: CMakeLists.txt  Reagan.cpp  Reagan.h  RegexUi.cpp  RegexUi.h  main.cpp  reui.pro
taskQueue/: CMakeLists.txt  OddEvenSort.cuh  SimpleQueue.cu  SimpleQueue.cuh  SimpleQueueInterface.h  main.cpp  (+2 more)
(+3042 files in other folders)
